# libpurple-rust

./: Cargo.toml  build.rs
src/: lib.rs  purple.rs
