[package]
name = "purple-sys-flared"
description = "Maintained fork of libpurple rust binding"
repository = "https://github.com/Flared/libpurple-rust"
keywords = ["purple", "libpurple"]
categories = ["api-bindings"]
license = "WTFPL"
version = "0.0.7"
authors = ["石博文 <sbw@sbw.so>", "isra17 <isra017@gmail.com>"]
build = "build.rs"
links = "purple"

[dependencies]
glib-sys = "^0"

[build-dependencies]
pkg-config = "^0"
libc = "^0"
bindgen = "^0"



